2 commit pc prof

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@ New project.uistate.xml
 New project.capx.backup1
 Layouts/Layout 2.uistate.xml
 Layouts/Layout 1.uistate.xml
+Layouts/Layout 3.uistate.xml
+Event sheets/Event sheet 1.uistate.xml
