--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 New project.uistate.xml
 New project.capx.backup1
 Layouts/Layout 2.uistate.xml
-Layouts/Layout 1.uistate.xml
+Layouts/Layout 1.uistate.xmlLayouts/Layout 1.uistate.xml
+Event sheets/Event sheet 1.uistate.xml
